feat: update api according to ID1 spec (#1824)
* feat: update api according to ID1 spec

* fix: coverage

* fix: lint

* fix: ack

* fix: notification as required

* feat: vp flow

* fix: lint
